# Object-AI

./: .gitignore
infrastructure/: terraform.tf
object_ai/: .gitignore  Dockerfile  deploy.sh  docker-compose.yml  install.sh  pyproject.toml  setup.py  update_docker_compose.py
object_ai/configs/: example_train_config.yaml
object_ai/infrastructure/: parameters.tfvars  variables.tf
object_ai/object_ai/: dataset.py  factories.py  models.py  paths.py  repos.py  serilaization.py  terraform.py  train.py  trainers.py  transforms.py
object_ai/object_ai/app/: app.py  application.py  models.py  services.py
object_ai/object_ai/modeling/: configs.py  training.py
object_ai/object_ai/orchestration/: training.py
object_ai/object_ai/storage/: s3.py
object_ai/object_ai/utils/: coco_eval.py  coco_utils.py  engine.py  transforms.py
object_ai/scripts/: convert.py  data.py  labelbox_integration.py  train.py
object_ai/tests/: test_dataset.py  test_paths.py  test_train.py  test_trainers.py
object_ai/tests/integrations/: test_repos.py
object_ai/tests/unit/: test_trainers.py
objective-ai-app/: package-lock.json  package.json
objective-ai-app/amplify/: team-provider-info.json
objective-ai-app/amplify/.config/: project-config.json
objective-ai-app/amplify/backend/: backend-config.json
objective-ai-app/amplify/backend/auth/objectiveaiappaa3bfe0b/: cli-inputs.json
objective-ai-app/amplify/backend/types/: amplify-dependent-resources-ref.d.ts
objective-ai-app/pages/: _app.js  _init.js  index.js
